# statsmodeling

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  data.csv
include/: ACF.hpp  AR.hpp  ARMA.hpp  OLS.hpp  PACF.hpp  frame.hpp  linalg.hpp  utils.hpp
src/: ACF.cpp  OLS.cpp  PACF.cpp  frame.cpp  linalg.cpp  main.cpp  utils.cpp
test/: .gitignore  CMakeLists.txt  test_ACF.cpp  test_OLS.cpp  test_PACF.cpp
test/csv/: ols_data.csv  ols_data_1d.csv  timeseries.csv
